--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ build/
 
 ### VS Code ###
 .vscode/
+.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/MavenWrapperDownloader.java
+.mvn/wrapper/maven-wrapper.properties
+mvnw
+mvnw.cmd
+src/main/java/META-INF/MANIFEST.MF
