--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 spring.application.name=spring-data-service
 
 # ===============================
@@ -7,8 +7,8 @@ spring.application.name=spring-data-service
  
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/appointmentdb
-spring.datasource.username=cs544
-spring.datasource.password=Password@44
+spring.datasource.username=root
+spring.datasource.password=root
  
 # ===============================
 # JPA / HIBERNATE
