--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- SPRING SECURIRY -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
