--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 		<version>2.2.5.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<groupId>cs544.project</groupId>
 	<artifactId>appointmentAPI-Springboot</artifactId>
 
 	<name>Appointments Project</name>
 	<description>Restful Service Using Spring boot</description>
-	
+
 	<properties>
 		<java.version>1.8</java.version>
 		<swagger.version>2.9.2</swagger.version>
@@ -25,7 +25,7 @@
 	</properties>
 
 	<dependencies>
-	<!-- Spring Boot and Spring Cloud -->
+		<!-- Spring Boot and Spring Cloud -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -38,7 +38,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<!-- MS SQL Server Driver -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
@@ -52,7 +52,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!-- Other third-party libraries -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -70,7 +70,7 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 		</dependency>
-		
+
 		<!-- Test frameworks -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,11 +88,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>org.modelmapper</groupId>
-		  <artifactId>modelmapper</artifactId>
-		  <version>2.3.0</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 
 		<dependency>
@@ -111,7 +111,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+		<!-- SPRING MAIL -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
