--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.application.name=spring-data-service
 # ===============================
  
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/appointmentdb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Password01@
+spring.datasource.url=jdbc:mysql://localhost:3306/appointmentdb?useSSL=false
+spring.datasource.username=cs544
+spring.datasource.password=Password@44
  
 # ===============================
 # JPA / HIBERNATE
